Changed logo to SVG

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <img src="Teknologika.png" style=" position: absolute; top: 50%; left: 50%; margin: -16px 0 0 -100px;">
+  <img src="TeknologikaLogo.svg" style=" position: absolute; top: 50%; left: 50%; margin: -16px 0 0 -100px;">
 </body>
 </html>
